deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tilt-reproduce-deployment
  labels:
    name: tilt-reproduce-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: templated-pod
  template:
    metadata:
      name: deployment-template
      labels:
        name: templated-pod
    spec:
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "mariadb"
      containers:
        - image: bitnami/symfony:1
          name: application
        - image: bitnami/mariadb:10.3
          name: mariadb
---
apiVersion: v1
kind: Service
metadata:
  name: test-port
spec:
  selector:
    name: templated-pod
  ports:
    - port: 8000
      targetPort: 80
      name: symfony

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-port
            port:
              name: symfony
